fix(vcalendar): add min-height:0 to to prevent overflow on Firefox
As per specification, flex child elements should have set min-height:0 (min-width for rows) to
prevent element overflow. See https://bugzilla.mozilla.org/show_bug.cgi?id=1114904

fix #8319

--- a/packages/vuetify/src/components/VCalendar/VCalendarWeekly.sass
+++ b/packages/vuetify/src/components/VCalendar/VCalendarWeekly.sass
@@ -28,6 +28,7 @@
   height: 100%
   display: flex
   flex-direction: column
+  min-height: 0
 
 .v-calendar-weekly__head
   display: flex
@@ -48,6 +49,7 @@
   display: flex
   flex: 1
   height: 0
+  min-height: 0
 
 .v-calendar-weekly__day
   flex: 1
